// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component styled components Basic render: StyledCalendarContainer has correct styles 1`] = `
Object {
  "paddingBottom": "$theme.sizing.scale500",
  "paddingLeft": "$theme.sizing.scale600",
  "paddingRight": "$theme.sizing.scale600",
  "paddingTop": "$theme.sizing.scale400",
}
`;

exports[`Component styled components Basic render: StyledDay has correct styles 1`] = `
Object {
  ":first-child": Object {
    "borderBottomLeftRadius": "$theme.borders.radius200",
    "borderTopLeftRadius": "$theme.borders.radius200",
  },
  ":last-child": Object {
    "borderBottomRightRadius": "$theme.borders.radius200",
    "borderTopRightRadius": "$theme.borders.radius200",
  },
  "backgroundColor": "transparent",
  "borderBottomLeftRadius": "$theme.borders.radius200",
  "borderBottomRightRadius": "$theme.borders.radius200",
  "borderTopLeftRadius": "$theme.borders.radius200",
  "borderTopRightRadius": "$theme.borders.radius200",
  "boxSizing": "border-box",
  "color": "inherit",
  "cursor": "pointer",
  "display": "inline-block",
  "height": "$theme.sizing.scale1000",
  "lineHeight": "$theme.sizing.scale800",
  "marginBottom": "0",
  "marginLeft": "0",
  "marginRight": "0",
  "marginTop": "0",
  "paddingBottom": "$theme.sizing.scale300",
  "paddingLeft": "$theme.sizing.scale200",
  "paddingRight": "$theme.sizing.scale200",
  "paddingTop": "$theme.sizing.scale300",
  "position": "relative",
  "textAlign": "center",
  "width": "$theme.sizing.scale1000",
}
`;

exports[`Component styled components Basic render: StyledHeader has correct styles 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "$theme.colors.primary",
  "borderRadius": "$theme.borders.radius200 $theme.borders.radius200 0 0",
  "color": "$theme.colors.white",
  "display": "flex",
  "justifyContent": "space-between",
  "paddingBottom": "$theme.sizing.scale500",
  "paddingLeft": "$theme.sizing.scale600",
  "paddingRight": "$theme.sizing.scale600",
  "paddingTop": "$theme.sizing.scale500",
}
`;

exports[`Component styled components Basic render: StyledMonth has correct styles 1`] = `
Object {
  "display": "inline-block",
}
`;

exports[`Component styled components Basic render: StyledMonthHeader has correct styles 1`] = `
Object {
  "whiteSpace": "no-wrap",
}
`;

exports[`Component styled components Basic render: StyledRoot has correct styles 1`] = `
Object {
  "backgroundColor": "$theme.colors.white",
  "borderRadius": "$theme.borders.radius200",
  "color": "$theme.colors.black",
  "display": "inline-block",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
  "textAlign": "center",
}
`;

exports[`Component styled components Basic render: StyledWeek has correct styles 1`] = `
Object {
  "display": "flex",
  "marginBottom": "$theme.sizing.scale100",
  "whiteSpace": "no-wrap",
}
`;

exports[`Component styled components Prop based styles: StyledDay has correct styles when $disabled is set to true 1`] = `
Object {
  ":first-child": Object {
    "borderBottomLeftRadius": "$theme.borders.radius200",
    "borderTopLeftRadius": "$theme.borders.radius200",
  },
  ":last-child": Object {
    "borderBottomRightRadius": "$theme.borders.radius200",
    "borderTopRightRadius": "$theme.borders.radius200",
  },
  "backgroundColor": "transparent",
  "borderBottomLeftRadius": "$theme.borders.radius200",
  "borderBottomRightRadius": "$theme.borders.radius200",
  "borderTopLeftRadius": "$theme.borders.radius200",
  "borderTopRightRadius": "$theme.borders.radius200",
  "boxSizing": "border-box",
  "color": "$theme.colors.mono600",
  "cursor": "default",
  "display": "inline-block",
  "height": "$theme.sizing.scale1000",
  "lineHeight": "$theme.sizing.scale800",
  "marginBottom": "0",
  "marginLeft": "0",
  "marginRight": "0",
  "marginTop": "0",
  "paddingBottom": "$theme.sizing.scale300",
  "paddingLeft": "$theme.sizing.scale200",
  "paddingRight": "$theme.sizing.scale200",
  "paddingTop": "$theme.sizing.scale300",
  "position": "relative",
  "textAlign": "center",
  "width": "$theme.sizing.scale1000",
}
`;

exports[`Component styled components Prop based styles: StyledDay has correct styles when $isHighlighted is set to true 1`] = `
Object {
  ":first-child": Object {
    "borderBottomLeftRadius": "$theme.borders.radius200",
    "borderTopLeftRadius": "$theme.borders.radius200",
  },
  ":last-child": Object {
    "borderBottomRightRadius": "$theme.borders.radius200",
    "borderTopRightRadius": "$theme.borders.radius200",
  },
  "backgroundColor": "$theme.colors.primary100",
  "borderBottomLeftRadius": "$theme.borders.radius200",
  "borderBottomRightRadius": "$theme.borders.radius200",
  "borderTopLeftRadius": "$theme.borders.radius200",
  "borderTopRightRadius": "$theme.borders.radius200",
  "boxSizing": "border-box",
  "color": "inherit",
  "cursor": "pointer",
  "display": "inline-block",
  "height": "$theme.sizing.scale1000",
  "lineHeight": "$theme.sizing.scale800",
  "marginBottom": "0",
  "marginLeft": "0",
  "marginRight": "0",
  "marginTop": "0",
  "paddingBottom": "$theme.sizing.scale300",
  "paddingLeft": "$theme.sizing.scale200",
  "paddingRight": "$theme.sizing.scale200",
  "paddingTop": "$theme.sizing.scale300",
  "position": "relative",
  "textAlign": "center",
  "width": "$theme.sizing.scale1000",
}
`;

exports[`Component styled components Prop based styles: StyledDay has correct styles when $isHovered is set to true 1`] = `
Object {
  ":first-child": Object {
    "borderBottomLeftRadius": "$theme.borders.radius200",
    "borderTopLeftRadius": "$theme.borders.radius200",
  },
  ":last-child": Object {
    "borderBottomRightRadius": "$theme.borders.radius200",
    "borderTopRightRadius": "$theme.borders.radius200",
  },
  "backgroundColor": "$theme.colors.primary100",
  "borderBottomLeftRadius": "$theme.borders.radius200",
  "borderBottomRightRadius": "$theme.borders.radius200",
  "borderTopLeftRadius": "$theme.borders.radius200",
  "borderTopRightRadius": "$theme.borders.radius200",
  "boxSizing": "border-box",
  "color": "inherit",
  "cursor": "pointer",
  "display": "inline-block",
  "height": "$theme.sizing.scale1000",
  "lineHeight": "$theme.sizing.scale800",
  "marginBottom": "0",
  "marginLeft": "0",
  "marginRight": "0",
  "marginTop": "0",
  "paddingBottom": "$theme.sizing.scale300",
  "paddingLeft": "$theme.sizing.scale200",
  "paddingRight": "$theme.sizing.scale200",
  "paddingTop": "$theme.sizing.scale300",
  "position": "relative",
  "textAlign": "center",
  "width": "$theme.sizing.scale1000",
}
`;

exports[`Component styled components Prop based styles: StyledDay has correct styles when $outsideMonth is set to true 1`] = `
Object {
  ":first-child": Object {
    "borderBottomLeftRadius": "$theme.borders.radius200",
    "borderTopLeftRadius": "$theme.borders.radius200",
  },
  ":last-child": Object {
    "borderBottomRightRadius": "$theme.borders.radius200",
    "borderTopRightRadius": "$theme.borders.radius200",
  },
  "backgroundColor": "transparent",
  "borderBottomLeftRadius": "$theme.borders.radius200",
  "borderBottomRightRadius": "$theme.borders.radius200",
  "borderTopLeftRadius": "$theme.borders.radius200",
  "borderTopRightRadius": "$theme.borders.radius200",
  "boxSizing": "border-box",
  "color": "$theme.colors.mono600",
  "cursor": "pointer",
  "display": "inline-block",
  "height": "$theme.sizing.scale1000",
  "lineHeight": "$theme.sizing.scale800",
  "marginBottom": "0",
  "marginLeft": "0",
  "marginRight": "0",
  "marginTop": "0",
  "paddingBottom": "$theme.sizing.scale300",
  "paddingLeft": "$theme.sizing.scale200",
  "paddingRight": "$theme.sizing.scale200",
  "paddingTop": "$theme.sizing.scale300",
  "position": "relative",
  "textAlign": "center",
  "width": "$theme.sizing.scale1000",
}
`;

exports[`Component styled components Prop based styles: StyledDay has correct styles when $selected is set to true 1`] = `
Object {
  ":first-child": Object {
    "borderBottomLeftRadius": "$theme.borders.radius200",
    "borderTopLeftRadius": "$theme.borders.radius200",
  },
  ":last-child": Object {
    "borderBottomRightRadius": "$theme.borders.radius200",
    "borderTopRightRadius": "$theme.borders.radius200",
  },
  "backgroundColor": "$theme.colors.primary",
  "borderBottomLeftRadius": "$theme.borders.radius200",
  "borderBottomRightRadius": "$theme.borders.radius200",
  "borderTopLeftRadius": "$theme.borders.radius200",
  "borderTopRightRadius": "$theme.borders.radius200",
  "boxSizing": "border-box",
  "color": "$theme.colors.white",
  "cursor": "pointer",
  "display": "inline-block",
  "height": "$theme.sizing.scale1000",
  "lineHeight": "$theme.sizing.scale800",
  "marginBottom": "0",
  "marginLeft": "0",
  "marginRight": "0",
  "marginTop": "0",
  "paddingBottom": "$theme.sizing.scale300",
  "paddingLeft": "$theme.sizing.scale200",
  "paddingRight": "$theme.sizing.scale200",
  "paddingTop": "$theme.sizing.scale300",
  "position": "relative",
  "textAlign": "center",
  "width": "$theme.sizing.scale1000",
}
`;
